--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.2",
     "@nestjs/cqrs": "^10.0.0",
+    "@nestjs/jwt": "^10.1.0",
     "@nestjs/microservices": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
     "@prisma/client": "^4.15.0",
