--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/microservices": "^10.0.2",
     "@nestjs/passport": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/platform-express": "^10.0.4",
+    "@nestjs/platform-socket.io": "^10.0.4",
+    "@nestjs/platform-ws": "^10.0.4",
+    "@nestjs/serve-static": "^4.0.0",
+    "@nestjs/websockets": "^10.0.4",
     "@prisma/client": "^4.15.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -35,6 +39,7 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "path": "^0.12.7",
     "prisma": "^4.15.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
@@ -50,7 +55,9 @@
     "@types/node": "18.11.18",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
+    "@types/socket.io": "^3.0.2",
     "@types/supertest": "^2.0.11",
+    "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
