--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@prisma/client": "^4.15.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "ejs": "^3.1.9",
+    "hbs": "^4.2.0",
     "kafkajs": "^2.2.4",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
